--- a/public/template.html
+++ b/public/template.html
@@ -1,81 +1,24 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Allan Lancioni - Consultoria em Tecnologia e IA</title>
-  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@700&family=Open+Sans:wght@400;600&display=swap"
-    rel="stylesheet">
-
-  <style>
-    .hero {
-      height: calc(100vh - 8rem);
-    }
-
-    .hero .decorative-lines::before,
-    .hero .decorative-lines::after {
-      content: '';
-      position: absolute;
-      top: 0;
-      left: 70%;
-      width: 2px;
-      height: 100%;
-      background: rgba(255, 255, 255, 0.02);
-      transform: translateX(-50%);
-    }
-
-    .hero .decorative-lines::after {
-      left: calc(50% + 100px);
-      transform: translateX(-50%);
-    }
-
-    .hidden-header {
-      transform: translateY(-100%);
-    }
-
-  </style>
-</head>
-
 <body class="bg-gray-900 text-gray-200 font-sans">
   <!-- Header -->
   <header id="header"
     class="bg-gray-800 text-white p-4 shadow-md top-0 left-0 right-0 z-50 transition-transform duration-300">
     <nav class="container mx-auto flex justify-between items-center">
       <div class="text-2xl font-bold">
-        <a href="#" class="logo text-white text-xl font-bold transition-colors duration-300 hover:text-blue-400">Allan
-          Lancioni</a>
+        <a href="#" class="logo text-white text-xl font-bold transition-colors duration-300 hover:text-blue-400">Logo</a>
       </div>
       <div class="hidden md:flex space-x-6">
         <a href="#"
           class="nav-item relative font-semibold overflow-hidden hover:text-blue-400 transition duration-300">Home</a>
         <a href="#"
-          class="nav-item relative font-semibold overflow-hidden hover:text-blue-400 transition duration-300">Sobre</a>
+          class="nav-item relative font-semibold overflow-hidden hover:text-blue-400 transition duration-300">About</a>
         <a href="#"
           class="nav-item relative font-semibold overflow-hidden hover:text-blue-400 transition duration-300">Blog</a>
         <a href="#"
-          class="nav-item relative font-semibold overflow-hidden hover:text-blue-400 transition duration-300">Portfólio</a>
+          class="nav-item relative font-semibold overflow-hidden hover:text-blue-400 transition duration-300">Portflio</a>
         <a href="#"
-          class="nav-item relative font-semibold overflow-hidden hover:text-blue-400 transition duration-300">Contato</a>
-      </div>
-      <div class="md:hidden">
-        <button id="menu-btn" class="text-white focus:outline-none">
-          <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 menu-icon transition-transform duration-300"
-            fill="none" viewBox="0 0 24 24" stroke="currentColor">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7" />
-          </svg>
-        </button>
+          class="nav-item relative font-semibold overflow-hidden hover:text-blue-400 transition duration-300">Contact</a>
       </div>
     </nav>
-    <div id="menu"
-      class="md:hidden menu-items max-h-0 font-semibold overflow-hidden transition-max-height duration-300 ease-out">
-      <a href="#" class="block py-2 px-4 hover:bg-gray-700 transition duration-300">Home</a>
-      <a href="#" class="block py-2 px-4 hover:bg-gray-700 transition duration-300">Sobre</a>
-      <a href="#" class="block py-2 px-4 hover:bg-gray-700 transition duration-300">Blog</a>
-      <a href="#" class="block py-2 px-4 hover:bg-gray-700 transition duration-300">Portfólio</a>
-      <a href="#" class="block py-2 px-4 hover:bg-gray-700 transition duration-300">Contato</a>
-    </div>
   </header>
 
   <!-- Main Content -->
@@ -85,13 +28,12 @@
       class="hero relative flex flex-col items-center justify-center h-[calc(100vh-8rem)] p-12 text-center bg-gradient-to-br from-gray-800 to-gray-900 rounded-md">
       <div class="decorative-lines absolute w-full h-full pointer-events-none z-0"></div>
       <div class="relative z-10">
-        <h1 class="font-serif text-3xl md:text-5xl font-bold text-white mb-4">Impulsione sua Produtividade com Nossas
-          Soluções de IA</h1>
-        <p class="font-sans text-lg md:text-xl text-gray-300 mb-8">Inovação, tecnologia de ponta e sofisticação para
-          transformar seu negócio.</p>
+        <h1 class="font-serif text-3xl md:text-5xl font-bold text-white mb-4">Impulsione sua Produtividade com Nossas Soluções de IA</h1>
+        <p class="font-sans text-lg md:text-xl text-gray-300 mb-8">Inovação, tecnologia de ponta e sofisticação para transformar seu negócio.</p>
         <a href="#"
-          class="cta-button font-sans text-lg md:text-xl font-semibold text-white bg-blue-600 px-6 py-3 rounded-full transition-colors duration-300 hover:bg-blue-700">Entre
-          em Contato</a>
+          class="cta-button font-sans text-lg md:text-xl font-semibold text-white bg-blue-600 px-6 py-3 rounded-full transition-colors duration-300 hover:bg-blue-700">
+          Entre em Contato
+        </a>
       </div>
     </section>
 
@@ -123,34 +65,6 @@
       </div>
     </section>
 
-    <!-- Recent Articles -->
-    <section class="my-16">
-      <h2 class="text-3xl font-bold text-gray-100 mb-6">Artigos Recentes</h2>
-      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
-        <div class="bg-gray-800 shadow-lg rounded-lg overflow-hidden">
-          <img src="https://via.placeholder.com/400x300" alt="Artigo 1" class="w-full">
-          <div class="p-4">
-            <h3 class="text-2xl font-bold text-gray-100">Artigo 1</h3>
-            <p class="text-gray-400">Resumo breve do artigo 1.</p>
-          </div>
-        </div>
-        <div class="bg-gray-800 shadow-lg rounded-lg overflow-hidden">
-          <img src="https://via.placeholder.com/400x300" alt="Artigo 2" class="w-full">
-          <div class="p-4">
-            <h3 class="text-2xl font-bold text-gray-100">Artigo 2</h3>
-            <p class="text-gray-400">Resumo breve do artigo 2.</p>
-          </div>
-        </div>
-        <div class="bg-gray-800 shadow-lg rounded-lg overflow-hidden">
-          <img src="https://via.placeholder.com/400x300" alt="Artigo 3" class="w-full">
-          <div class="p-4">
-            <h3 class="text-2xl font-bold text-gray-100">Artigo 3</h3>
-            <p class="text-gray-400">Resumo breve do artigo 3.</p>
-          </div>
-        </div>
-      </div>
-    </section>
-  </main>
 
   <!-- Footer -->
   <footer class="bg-gray-800 text-white p-4 mt-8">
@@ -165,34 +79,4 @@
       </div>
     </div>
   </footer>
-
-  <script>
-    const header = document.getElementById('header')
-    const menuBtn = document.getElementById('menu-btn')
-    const menu = document.getElementById('menu')
-    const menuIcon = document.querySelector('.menu-icon')
-    let lastScrollY = window.scrollY
-
-    window.addEventListener('scroll', () => {
-      if (window.scrollY > lastScrollY) {
-        header.classList.add('hidden-header')
-      } else {
-        header.classList.remove('hidden-header')
-      }
-      lastScrollY = window.scrollY
-
-      if (window.scrollY > 100) {
-        header.classList.add('fixed')
-      } else {
-        header.classList.remove('fixed')
-      }
-    })
-
-    menuBtn.addEventListener('click', () => {
-      menu.classList.toggle('open')
-      menuIcon.classList.toggle('open')
-    });
-  </script>
 </body>
-
-</html>
